<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/titleScreenDevel">

    <!--
    <Preference
        android:summary="@string/summaryQuickSettings"
        android:title="@string/titleQuickSettings"
        app:iconSpaceReserved="false">
        <intent
            android:targetClass="com.alexvt.whisperinput.speak.activity.QuickSettingsActivity"
            android:targetPackage="com.alexvt.whisperinput" />
    </Preference>
    -->
    <CheckBoxPreference
        android:defaultValue="@bool/defaultGetPutPrefSkipUi"
        android:key="@string/keyGetPutPrefSkipUi"
        android:summary="@string/summaryGetPutPrefSkipUi"
        android:title="@string/titleGetPutPrefSkipUi"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        android:title="@string/titleCategoryDemos"
        app:iconSpaceReserved="false">
        <Preference
            android:summary="@string/summarySimpleDemo"
            android:title="@string/labelActivitySimpleDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.SimpleDemo"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <Preference
            android:summary="@string/summaryExtrasDemo"
            android:title="@string/labelActivityExtrasDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.ExtrasDemo"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <Preference
            android:summary="@string/summaryChatDemo"
            android:title="@string/labelActivityChatDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.ChatDemoActivity"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <Preference
            android:summary="@string/summaryVoiceSearchDemo"
            android:title="@string/labelActivityVoiceSearchDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.VoiceSearchDemo"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <Preference
            android:summary="@string/summaryFormDemo"
            android:title="@string/labelActivityFormDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.FormDemoActivity"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <Preference
            android:summary="@string/summaryEncoderDemo"
            android:title="@string/labelActivityEncoderDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.EncoderDemoActivity"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>

        <Preference
            android:summary="@string/labelActivityEncoderListDemo"
            android:title="@string/labelActivityEncoderListDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.EncoderListDemo"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>

        <Preference
            android:summary="@string/labelActivityImeListDemo"
            android:title="@string/labelActivityImeListDemo"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.alexvt.whisperinput.speak.demo.ImeListDemo"
                android:targetPackage="com.alexvt.whisperinput" />
        </Preference>
        <!-- TODO: localize -->
        <Preference
            android:summary="Switch on if background audio does not stop during recognition"
            android:title="Do Not Disturb access"
            app:iconSpaceReserved="false">
            <intent android:action="android.settings.NOTIFICATION_POLICY_ACCESS_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>