<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    // Settings that apply to the Offline server (Whisper AI)
    <CheckBoxPreference
        android:defaultValue="@bool/defaultOfflineAutoStopAfterPause"
        android:key="@string/keyOfflineAutoStopAfterPause"
        android:summary="@string/summaryAutoStopAfterPause"
        android:title="@string/titleAutoStopAfterPause"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="@bool/defaultImeAudioCues"
        android:key="@string/keyImeAudioCues"
        android:summary="@string/summaryAudioCues"
        android:title="@string/titleAudioCues"
        app:iconSpaceReserved="false" />
    <ListPreference
        android:defaultValue="@string/defaultAudioFormat"
        android:entries="@array/entriesAudioFormat"
        android:entryValues="@array/valuesAudioFormat"
        android:key="@string/keyImeAudioFormat"
        android:summary="@string/summaryAudioFormat"
        android:title="@string/titleAudioFormat"
        app:iconSpaceReserved="false" />
</PreferenceScreen>